# OptimHandCon

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Dynamics.cpp  Dynamics.hpp  HandMaker.cpp  HandMaker.hpp  IkSolver.cpp  IkSolver.hpp  MyWindow.cpp  MyWindow.hpp  README.md  SkelParser.cpp  SkelParser.hpp  Tendon.cpp  Tendon.hpp  Things to be considered.odt  main.cpp
